--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -1,1 +1,4 @@
-p= answer.body
+- if answer.persisted?
+  p= answer.body
+  - if current_user&.author_of?(answer)
+    p= link_to 'Delete Answer', answer_path(answer), method: :delete, data: { confirm: 'Are you sure?' }
