--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -3,12 +3,14 @@ p= @question.body
 - if current_user&.author_of?(@question)
   p= link_to 'Delete', question_path(@question), method: :delete, data: { confirm: 'Are you sure?' }
 
-h2= 'Answers list'
 
-= render @question.answers
+.answers
+  = render @question.answers
 
-= form_with model: [@question, @answer], local: true do |f|
+.answer-errors
   = render 'shared/errors', resource: @answer
-  = f.label :body
+
+= form_with model: [@question, @answer] do |f|
+  = f.label :body, 'Your answers'
   = f.text_area :body
-  = f.submit 'Submit answer'
+  = f.submit 'Create'
