--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -1,1 +1,14 @@
-= link_to question.title, question_path(question)
+
+  h1= @question.title
+  p= @question.body
+  - if current_user&.author_of?(@question)
+    p= link_to 'Edit', '#', class: 'edit-question-link'
+    p= link_to 'Delete', question_path(@question), method: :delete, data: { confirm: 'Are you sure?' }
+  = form_with model: @question, class: 'edit-question hidden' do |f|
+    = f.label :title
+    = f.text_area :title
+    = f.label :body, 'Your question'
+    = f.text_area :body
+    = f.submit 'Save'
+  .question-errors
+    = render 'shared/errors', resource: @question
