--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -1,4 +1,5 @@
 p= 'List of questions'
 p= link_to 'Ask question', new_question_path
 
-= render @questions
+- @questions.each do |question|
+  p= link_to question.title, question_path(question)
