--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -4,10 +4,9 @@
 .answers
   = render @question.answers
 
-.answer-errors
-  = render 'shared/errors', resource: @answer
-
 = form_with model: [@question, @answer] do |f|
   = f.label :body, 'Your answer'
   = f.text_area :body
   = f.submit 'Create'
+
+.new-answer-errors
