--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -3,7 +3,7 @@
     p= answer.body
     - if current_user&.author_of?(answer)
       p= link_to 'Edit', '#', class: 'edit-answer-link', data: { answer_id: answer.id }
-      p= link_to 'Delete Answer', answer_path(answer), method: :delete, data: { confirm: 'Are you sure?' }
+      p= link_to 'Delete Answer', answer_path(answer), method: :delete
  
     = form_with model: answer, class: 'hidden', html: { id: "edit-answer-#{answer.id}" }  do |f|
       = f.label :body, 'Your answer'
