--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -1,9 +1,14 @@
 - if answer.persisted?
   div id="answer-#{answer.id}"
+    - if answer.best?
+        b= '(Best)'
     p= answer.body
+    - if current_user&.author_of?(answer.question) 
+      p= link_to 'Make the best', best_answer_path(answer), method: :patch, remote: true, class: 'best-answer-link', data: { answer_id: answer.id }
+      
     - if current_user&.author_of?(answer)
       p= link_to 'Edit', '#', class: 'edit-answer-link', data: { answer_id: answer.id }
-      p= link_to 'Delete Answer', answer_path(answer), method: :delete
+      p= link_to 'Delete Answer', answer_path(answer), method: :delete, remote: true
  
     = form_with model: answer, class: 'hidden', html: { id: "edit-answer-#{answer.id}" }  do |f|
       = f.label :body, 'Your answer'
