--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,8 +1,7 @@
 .question
   = render @question
-
 .answers
-  = render @question.answers
+  = render @question.answers.order('answers.best DESC')
 
 = form_with model: [@question, @answer] do |f|
   = f.label :body, 'Your answer'
