--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -1,14 +1,14 @@
 
-  h1= @question.title
-  p= @question.body
-  - if @question.files.attached?
+  h1= question.title
+  p= question.body
+  - if question.files.attached?
     p 
-      - @question.files.each do |file|
+      - question.files.each do |file|
         = link_to file.filename.to_s, url_for(file)
-  - if current_user&.author_of?(@question)
+  - if current_user&.author_of?(question)
     p= link_to 'Edit', '#', class: 'edit-question-link'
-    p= link_to 'Delete', question_path(@question), method: :delete, data: { confirm: 'Are you sure?' }
-  = form_with model: @question, class: 'edit-question hidden' do |f|
+    p= link_to 'Delete', question_path(question), method: :delete, data: { confirm: 'Are you sure?' }
+  = form_with model: question, class: 'edit-question hidden' do |f|
     = f.label :title
     = f.text_area :title
     = f.label :body, 'Your question'
