--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -6,6 +6,8 @@
 = form_with model: [@question, @answer] do |f|
   = f.label :body, 'Your answer'
   = f.text_area :body
+  = f.label :files
+  = f.file_field :files, multiple: true
   = f.submit 'Create'
 
 .new-answer-errors
