--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -9,10 +9,15 @@
     p= link_to 'Edit', '#', class: 'edit-question-link'
     p= link_to 'Delete', question_path(question), method: :delete, data: { confirm: 'Are you sure?' }
   = form_with model: question, class: 'edit-question hidden' do |f|
-    = f.label :title
-    = f.text_area :title
-    = f.label :body, 'Your question'
-    = f.text_area :body
-    = f.submit 'Save'
+    p
+      = f.label :title
+      = f.text_area :title
+    p
+      = f.label :body, 'Your question'
+      = f.text_area :body
+    p
+      = f.label :files
+      = f.file_field :files, multiple: true, direct_upload: true
+    p= f.submit 'Save'
   .question-errors
     = render 'shared/errors', resource: @question
