--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -1,10 +1,11 @@
 
   h1= question.title
   p= question.body
-  - if question.files.attached?
-    p 
-      - question.files.each do |file|
-        = link_to file.filename.to_s, url_for(file)
+
+  .files
+    - if question.files.attached?
+      = render partial: 'shared/file', collection: question.files
+
   - if current_user&.author_of?(question)
     p= link_to 'Edit', '#', class: 'edit-question-link'
     p= link_to 'Delete', question_path(question), method: :delete, data: { confirm: 'Are you sure?' }
