--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -10,7 +10,13 @@
 
     .links
       - answer.links.each do |link|
-        p= link_to link.name, link.url
+        - if is_gist?(link) 
+          - get_gist_files(link).each do |file|
+            = link_to link.name, link.url
+            p= file[1].filename
+            p= file[1].content
+        - else
+          p= link_to link.name, link.url
 
     - if current_user&.author_of?(answer.question) 
       p= link_to 'Make the best', best_answer_path(answer), method: :patch, remote: true, class: 'best-answer-link', data: { answer_id: answer.id }
