--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -8,7 +8,13 @@
 
   .links
     - question.links.each do |link|
-      p= link_to link.name, link.url
+      - if is_gist?(link) 
+        - get_gist_files(link).each do |file|
+          = link_to link.name, link.url
+          p= file[1].filename
+          p= file[1].content
+      - else
+        p= link_to link.name, link.url
 
   - if current_user&.author_of?(question)
     p= link_to 'Edit', '#', class: 'edit-question-link'
