--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -8,15 +8,17 @@
       - if answer.files.attached?
         = render partial: 'shared/file', collection: answer.files
 
-    .links
+    .links-list
       - answer.links.each do |link|
-        - if is_gist?(link) 
-          - get_gist_files(link).each do |file|
-            = link_to link.name, link.url
-            p= file[1].filename
-            p= file[1].content
-        - else
-          p= link_to link.name, link.url
+        .div id='link-#{link.id}'
+          = link_to link.name, link.url
+          - if current_user&.author_of?(answer)
+            p= link_to 'Delete link', link_path(link), method: :delete, remote: true
+          - if gist?(link) 
+            - get_gist_files(link).each do |file|
+              p= file[1].filename
+              p= file[1].content
+
 
     - if current_user&.author_of?(answer.question) 
       p= link_to 'Make the best', best_answer_path(answer), method: :patch, remote: true, class: 'best-answer-link', data: { answer_id: answer.id }
@@ -32,5 +34,10 @@
       p
         = f.label :files
         = f.file_field :files, multiple: true, direct_upload: true
+        p Links
+        = f.fields_for :links do |l|
+        .links
+          = link_to_add_association 'Add link', f, :links, partial: 'shared/link_fields'
+
       = f.submit 'Save'
   div id="answer-errors-#{answer.id}"
