8.. History : When creating a question, the user can also create a reward for the best answer.

--- a/app/views/questions/new.html.slim
+++ b/app/views/questions/new.html.slim
@@ -16,4 +16,13 @@
     = f.fields_for :links do |l|
     .links
       = link_to_add_association 'Add link', f, :links, partial: 'shared/link_fields'
+  p Reward:
+  = f.fields_for :reward do |r|
+    p 
+      = r.label :title, 'Reward title'
+      = r.text_field :title
+    p
+      = r.label :image
+      = r.file_field :image
+
   p= f.submit 'Ask'
