9_forms_ajax - All-History: Authenticated user can vote for the question / answer they like.

--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -4,6 +4,10 @@
         b= '(Best)'
     p= answer.body
 
+    .rating
+      p.score= answer.score
+      = render "shared/vote", resource: answer
+
     .files
       - if answer.files.attached?
         = render partial: 'shared/file', collection: answer.files
