10_action_cable - History: When adding a new question, all users who have a list of questions open should have a new question in the list.

--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,5 +1,5 @@
 .question
-  = render @question
+  = render partial: 'question_card', locals: { question: @question }
 .answers
   h3 Answers
   = render @question.answers.order('answers.best DESC')
