--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,6 +8,7 @@ html lang="en"
     
     = csrf_meta_tags
     = stylesheet_link_tag "application", :media => "all"
+    = action_cable_meta_tag
     = javascript_include_tag "application"
   body
     = render 'shared/nav' 
