10... : When adding an answer to a question, this answer should appear to all users who have this question open.

--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -1,7 +1,7 @@
 - if answer.persisted?
   div id="answer-#{answer.id}"
     - if answer.best?
-        b= '(Best)'
+      b= '(Best)'
     p= answer.body
 
     .rating
@@ -14,7 +14,7 @@
 
     .links-list
       - answer.links.each do |link|
-        .div id='link-#{link.id}'
+        div id='link-#{link.id}'
           = link_to link.name, link.url
           - if current_user&.author_of?(answer)
             p= link_to 'Delete link', link_path(link), method: :delete, remote: true
@@ -31,7 +31,7 @@
       p= link_to 'Edit', '#', class: 'edit-answer-link', data: { answer_id: answer.id }
       p= link_to 'Delete Answer', answer_path(answer), method: :delete, remote: true
  
-    = form_with model: answer, class: 'hidden', html: { id: "edit-answer-#{answer.id}" }  do |f|
+    = form_with model: answer, class: 'hidden edit-answer', html: { id: "edit-answer-#{answer.id}" }  do |f|
       p
         = f.label :body, 'Your answer'
         = f.text_area :body
