--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -6,6 +6,7 @@ html lang="en"
     meta name="viewport" content="width=device-width, initial-scale=1.0"
     title= content_for?(:title) ? yield(:title) : "Qna"
     
+    = Gon::Base.render_data
     = csrf_meta_tags
     = stylesheet_link_tag "application", :media => "all"
     = action_cable_meta_tag
