--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,5 +1,10 @@
 .question
   = render partial: 'question_card', locals: { question: @question }
+  .comments
+    h4 Comments
+    = render @question.comments.order(:created_at)
+  h4 New comment
+  = render partial: 'comments/form', locals: { resource: @question }
 .answers
   h3 Answers
   = render @question.answers.order(best: :desc).order(:created_at)
@@ -19,4 +24,3 @@
     .links
       = link_to_add_association 'Add link', f, :links, partial: 'shared/link_fields'
   = f.submit 'Create'
-
