10.. History: When adding a comment to the answer, it should appear in all users who have a page with the same question open.

--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -44,4 +44,8 @@
           = link_to_add_association 'Add link', f, :links, partial: 'shared/link_fields'
 
       = f.submit 'Save'
-  div id="answer-errors-#{answer.id}"
+    div id="answer-errors-#{answer.id}"
+    .comments
+      h4 Comments
+      = render answer.comments.order(:created_at)
+    = render partial: 'comments/form', locals: { resource: answer }
