--- a/app/views/comments/_form.html.slim
+++ b/app/views/comments/_form.html.slim
@@ -1,5 +1,6 @@
 .new-comment
   - if user_signed_in?
+    h4 New comment
     = form_with model: [resource, resource.comments.build] do |f|
       = hidden_field_tag :commentable, resource.class.name
       p 
