--- a/app/views/questions/_question_card.html.slim
+++ b/app/views/questions/_question_card.html.slim
@@ -23,6 +23,7 @@
 
   - if current_user&.author_of?(question)
     p= link_to 'Edit', '#', class: 'edit-question-link'
+  - if can? :destroy, question
     p= link_to 'Delete', question_path(question), method: :delete, data: { confirm: 'Are you sure?' }
   = form_with model: question, class: 'edit-question hidden' do |f|
     p
