--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -1,5 +1,6 @@
 p= 'List of questions'
-p= link_to 'Ask question', new_question_path
+- if can? :create, Question
+  p= link_to 'Ask question', new_question_path
 
 .questions-list
   = render @questions
