--- a/app/views/daily_digest_mailer/digest.html.slim
+++ b/app/views/daily_digest_mailer/digest.html.slim
@@ -1,2 +1,8 @@
-h1 DailyDigest#digest
-p = @greeting + ", find me in app/views/daily_digest_mailer/digest.html.slim"
+h1 List with new ones questions:
+- if @questions.count.zero?
+  p
+    | No new questions
+- else
+  ol
+    - @questions.each do |question|
+      li= link_to question.title, question_url(question)
