--- a/app/views/daily_digest_mailer/digest.text.slim
+++ b/app/views/daily_digest_mailer/digest.text.slim
@@ -1,3 +1,7 @@
-' DailyDigest#digest
-= "\r\n" * 2
-' #{@greeting + ", find me in app/views/daily_digest_mailer/digest.text.slim"}
+| List with new question:
+= "\n"
+- if @questions.count.zero?
+  | No new questions
+- else
+  - @questions.each_with_index do |question, index|
+    = "\n#{index + 1}) #{question.title}, url: #{question_url(question)}"
