--- a/app/views/questions/_question_card.html.slim
+++ b/app/views/questions/_question_card.html.slim
@@ -21,12 +21,7 @@
             p= file[1].content
 
   .subscription
-    - if can? :create, Subscription
-      - if question.subscribed?(current_user)
-        = link_to 'Unsubscribe', subscription_path(question.subscriptions.find_by(user: current_user)), method: :delete, remote: true
-      - else
-        = link_to 'Subscribe', subscriptions_path(question_id: question.id), method: :post, remote: true
-      
+    = render 'shared/subscribe', question: question
 
   - if current_user&.author_of?(question)
     p= link_to 'Edit', '#', class: 'edit-question-link'
