--- a/app/views/shared/_nav.html.slim
+++ b/app/views/shared/_nav.html.slim
@@ -1,11 +1,16 @@
-.navbar
-  .container
-    = link_to "Qna", root_path , class: "navbar-brand"
-    .d-flex.d-flex-row
-      - if user_signed_in?
-        = link_to 'Rewards', rewards_path, class: 'container navbar-item'
+.navbar.container
+  = link_to "Qna", root_path , class: "navbar-brand"
+
+  .d-flex.d-flex-row
+    - if user_signed_in?
+      = link_to 'Rewards', rewards_path, class: 'container navbar-item'
+      .navbar-item
         = current_user.email
-        = link_to 'Sign out', destroy_user_session_path, method: :delete, class: 'navbar-item'
-      - else
-        = link_to 'Sign in', new_user_session_path, class: 'navbar-item'
-        = link_to 'Registration', new_user_registration_path, class: 'navbar-item'
+      = link_to 'Sign_out', destroy_user_session_path, method: :delete, class: 'navbar-item'
+    - else
+      = link_to 'Sign in', new_user_session_path, class: 'navbar-item'
+      = link_to 'Registration', new_user_registration_path, class: 'navbar-item'
+  
+  .search
+    = render 'shared/search'
+
