15_sphinx - Tests: Add some tests

--- a/app/views/searches/_question.html.slim
+++ b/app/views/searches/_question.html.slim
@@ -1,3 +1,4 @@
-h4 Question 
-= link_to resource.title, question_path(resource)
-p= resource.body
+.question
+  h4 Question 
+  = link_to resource.title, question_path(resource)
+  p= resource.body
