--- a/app/views/searches/_answer.html.slim
+++ b/app/views/searches/_answer.html.slim
@@ -1,3 +1,4 @@
-h4 Answer
-= link_to "Link to the question: #{resource.question.title}", question_path(resource.question)
-p= resource.body
+.answer
+  h4 Answer
+  = link_to "Link to the question: #{resource.question.title}", question_path(resource.question)
+  p= resource.body
