--- a/app/views/comments/_comment.html.slim
+++ b/app/views/comments/_comment.html.slim
@@ -1,4 +1,5 @@
-.comment id="comment-#{comment.id}"
-  p = "#{comment.created_at}"
-  p = "#{comment.user.email}: #{comment.body}"
+- cache comment do
+  .comment id="comment-#{comment.id}"
+    p = "#{comment.created_at}"
+    p = "#{comment.user.email}: #{comment.body}"
   
